--- a/wishlist/package.json
+++ b/wishlist/package.json
@@ -22,6 +22,7 @@
     "jest": "^27.2.5",
     "restify": "^8.6.0",
     "restify-router": "^0.6.2",
+    "swagger-ui-restify": "^3.0.8",
     "typescript": "^4.4.3",
     "winston": "^3.3.3"
   }
